[package]
name = "okta"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
oauth2 = { version = "4.4.2", features = ["reqwest"] }
reqwest = { version = "0.12.9", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
url = "2.5.3"
